tried to solve overlap problem

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -10,5 +10,3 @@
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
-
-body { padding-top: 70px: }
